# fp-ledger-reconciler

./: .gitignore  Makefile  README.md  alembic.ini  app.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py  models.py  schemas.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: __init__.py  session.py
app/services/: ledger.py  reconciliation.py
app/services/connectors/: mock_bank.py
docker/: Dockerfile
fp_ledger_reconciler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_ledger.py  test_reconciliation.py
